[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "data-metrics"
version = "0.1.0"
description = "Quality metrics for video (MP4) and OmegaPrime (MCAP) datasets, with a dataset-level summary tool."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "RISE Dependable and Autonomous Systems" }]
keywords = ["quality-metrics", "video", "omegaprime", "mcap", "osi", "dataset"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

# data_metrics.py needs numpy/opencv/av at import time, and pandas + mcap for the
# OmegaPrime (MCAP) metrics. data_metrics_summary.py is pure standard library.
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "av>=12.0.0",
    "pandas>=2.0.0",
    "mcap>=1.0.0",
    "mcap-protobuf-support>=0.5.0",
]

[project.scripts]
data-metrics = "data_metrics:main"
data-metrics-summary = "data_metrics_summary:main"

[tool.setuptools]
py-modules = ["data_metrics", "data_metrics_summary"]
